Fix blue button text on mobile

--- a/pages/drugs/drug.module.css
+++ b/pages/drugs/drug.module.css
@@ -89,6 +89,7 @@
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
     font-size: 1.05rem;
     transition: all 0.3s ease;
+    color: black;
 }
 
 .sectionButton:hover {
